--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <p>
   <ul>
-	<li><strong>Email:</strong> <a href="mailto:rlazunin@gmail.com">rlazunin@gmail</a></li>
+	<li><strong>Email:</strong> <a href="mailto:rlazunin@gmail.com">rlazunin@gmail.com</a></li>
 	<li><strong>GitHub:</strong> <a href="https://github.com/romanlazunin" target="_blank">https://github.com/romanlazunin</a></li>
 	<li><strong>Stackoverflow Careers:</strong>&nbsp;<a href="https://careers.stackoverflow.com/romanlazunin" target="_blank">https://careers.stackoverflow.com/romanlazunin</a></li>
 	<li><strong>Facebook:</strong>&nbsp;<a href="https://www.facebook.com/roman.lazunin" target="_blank">http://www.facebook.com/roman.lazunin</a></li>
