added medium blog link

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
 <p>
   <ul>
+	<li><strong>Medium:</strong> <a href="https://romanlazuninblog.wordpress.com">https://medium.com/@romanlazunin</a></li>
 	<li><strong>Blog:</strong> <a href="https://romanlazuninblog.wordpress.com">romanlazuninblog.wordpress.com</a></li>
 	<li><strong>Email:</strong> <a href="mailto:rlazunin@gmail.com">rlazunin@gmail.com</a></li>
 	<li><strong>GitHub:</strong> <a href="https://github.com/romanlazunin" target="_blank">https://github.com/romanlazunin</a></li>
